--- a/README.org
+++ b/README.org
@@ -4,7 +4,8 @@
 #+OPTIONS: toc:nil num:nil ^:nil
 
 * Introduction
-This =zsh= plugin manages my personal dotfiles.
+This =zsh= plugin manages my personal dotfiles. For more details you can have a look into the
+[[file:dotfiles/README.org][README]] associated to =dot= files.
 
 The latest version is at http://github.com/xgarrido/zsh-dotfiles.
 
@@ -34,33 +35,3 @@ Add the following line into your =~/.zshrc= file:
 #+BEGIN_SRC shell
   antigen bundle xgarrido/zsh-dotfiles
 #+END_SRC
-
-* Inside =dotfiles=
-
-The dotfiles are stored within the =dotfiles= directory and include (non exhaustive list)
-
-- Shell environment
-  - [[file:dotfiles/zshrc][zshrc]] :: zsh use =antigen= zsh bundle which is reponsible for downloading and
-       loading different zsh plugins
-  - [[file:dotfiles/bashrc][bashrc]] :: bash (not used anymore)
-  - [[file:dotfiles/profiles][profiles]] :: defines =PATH= variable and other environment variables
-  - [[file:dotfiles/toprc][toprc]] :: fancy colors for =top= command (discarded in profit of =glances= python package)
-
-- X11 settings
-  - [[file:dotfiles/Xdefaults][Xdefaults]] :: it mainly contains some Xft antialias stuff and define =emacs=
-       default font
-
-- Individual tool configurations
-  - [[file:gitconfig][gitconfig]] :: =git= mail and name configuration
-  - [[file:latexmkrc][latexmkrc]] :: setup for =latexmk=
-
-- Application configuration
-  - [[file:dotfiles/config/openbox/][openbox]] :: =openbox= configuration files
-  - [[file:dotfiles/config/terminator][terminator]] :: =terminator= terminal
-  - [[file:dotfiles/config/dunst][dunst]] :: =dunst= notification system (much better than =libnotify=)
-  - [[file:dotfiles/config/matplotlib][matplotlib]] :: =matplotlib= configuration files
-  - [[file:dotfiles/config/root][root]] :: =ROOT= CERN configuration files
-
-- Misc.
-  - [[file:fonts][fonts]] :: directory that holds additionnal fonts
-  - [[file:bin][bin]] :: binaries directory
